--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>高考填报志愿综合参考系统</title>
+    <title>研招网报</title>
     <script src="//t3.chei.com.cn/common/js/vue/2.5.6/vue.min.js"></script>
-    <script src="//t3.chei.com.cn/common/js/iview/2.5.16/iview.min.js"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-100524-6"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    </script>
   </head>
   <body>
     <div id="app"></div>
+    <script>
+      var mixin = {
+        test: '111',
+        a: '78788'
+      }
+    </script>
     <!-- built files will be auto injected -->
     <script src="//t1.chei.com.cn/common/ch/browser/least-ie10.min.js"></script>
   </body>
